# projecteuler

./: .gitmodules  CMakeLists.txt  README.md
c/: CMakeLists.txt
c/include/: digits.h  errormessages.h  fractions.h  intlist.h  numbers.h  primelist.h
c/src/: 30-fifth-powers.c  31-coins.c  32-pandigital.c  33-digit-cancelling-fractions.c  34-digit-factorials.c  35-circular-primes.c  36-double-base-palindromes.c  37-truncable-primes.c  38-pandigital-multiples.c  41-pandigital-prime.c  CMakeLists.txt  digits.c  errormessages.c  fractions.c  intlist.c  numbers.c  primelist.c
c/test/: CMakeLists.txt  digits-test.cpp  fractions-test.cpp  intlist-test.cpp  numbers-test.cpp  primelist-test.cpp
haskell/: 27.hs  28.hs  29.hs
